# AetherNet

./: .gitignore  docker-compose.yml  readMe.md
frontend/: package-lock.json  package.json
frontend/src/lib/: api.ts
frontend/src/lib/components/: BarChart.svelte  TopASChart.svelte  TopCountriesChart.svelte  TrafficByASChart.svelte  TrafficByCountryChart.svelte
frontend/src/routes/: +page.svelte
netflow_generator/: Cargo.toml
netflow_generator/src/: main.rs
netflow_processor/: Cargo.toml
netflow_processor/src/: api.rs  db_handler.rs  enricher.rs  kafka_handler.rs  main.rs  netflow_processor.rs
