[package]
name = "netflow_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
netflow_parser = "0.3.6"
tokio = { version = "1.38.0", features = ["full"]}
rdkafka = { version = "0.36.2" , features = ["cmake-build"]}
serde = { version = "1.0.204" , features = ["derive"]}
serde_json = "1.0.120"
cidr = "0.2.3"
anyhow = "1.0.86"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
chrono = {version = "0.4.38", features = ["serde"]}
actix-web = "4.8.0"
actix-cors = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

